# kirbus

./: .gitignore  README.md  example-registry.toml  example-server.toml  pyproject.toml
.claude/: settings.json
.github/workflows/: publish.yml
dashboard/: index.html
deploy/: app.py  cdk.json  ezchat_stack.py
docs/: ARCHITECTURE.md  PHASES.md
examples/agents/: README.md  command_response.py  file_bridge.py  notification_push.py  remote_shell.py
src/ezchat/: __main__.py  home.py
src/ezchat/agent/: __init__.py  echo.py  games_agent.py  runner.py
src/ezchat/ai/: __init__.py  config.py  provider.py
src/ezchat/bench/: __init__.py  suite.py  timer.py
src/ezchat/crypto/: __init__.py  keys.py  session.py
src/ezchat/games/: __init__.py  zork.py
src/ezchat/net/: __init__.py  connection.py  frame.py  handshake.py  rendezvous_client.py
src/ezchat/store/: __init__.py  channels.py  history.py  log.py  peers.py
src/ezchat/themes/: __init__.py  amber.toml  ansi_bbs.toml  c64.toml  paper_white.toml  phosphor_green.toml
src/ezchat/ui/: __init__.py  app.py  draw.py  input_handler.py  models.py  net_thread.py  test_sim.py  theme.py
src/ezchat_server/: __main__.py  config.py  relay.py  rendezvous.py
src/kirbus/: home.py
src/kirbus/agent/: games_agent.py  home_agent.py  menu.py  runner.py
src/kirbus/games/: adventure.py  barrenrealms.py  tictactoe.py  tradewars.py  zork.py
src/kirbus/net/: rendezvous_client.py
src/kirbus/ui/: app.py  draw.py  input_handler.py  models.py  net_thread.py
src/kirbus_server/: rendezvous.py
tests/: test_connection.py  test_store.py
