[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezchat"
version = "0.1.0"
description = "P2P end-to-end encrypted terminal chat with AI integration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "Environment :: Console :: Curses",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/wehale/ezchat"
Repository = "https://github.com/wehale/ezchat"
dependencies = [
    "cryptography",
    "aiohttp",
    "aiortc",
]

[project.optional-dependencies]
ai     = ["anthropic", "openai"]
sounds = ["pygame"]
games  = ["jericho", "python-chess"]
server = []   # ezchat_server uses only core deps
dev    = ["pytest", "pytest-asyncio"]

[project.scripts]
ezchat          = "ezchat.__main__:main"
ezchat-server   = "ezchat_server.__main__:main"
ezchat-registry = "ezchat_registry.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ezchat", "src/ezchat_server", "src/ezchat_registry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
