[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kirbus"
version = "0.4.1"
description = "P2P end-to-end encrypted terminal chat with AI integration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "Environment :: Console :: Curses",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "cryptography",
    "aiohttp",
    "aiortc",
    "wcwidth",
]

[project.urls]
Homepage = "https://github.com/wehale/kirbus"
Repository = "https://github.com/wehale/kirbus"

[project.optional-dependencies]
ai     = ["anthropic", "openai"]
sounds = ["pygame"]
games  = ["python-chess"]
server = []   # kirbus_server uses only core deps
dev    = ["pytest", "pytest-asyncio"]

[project.scripts]
kirbus          = "kirbus.__main__:main"
kirbus-server   = "kirbus_server.__main__:main"
kirbus-registry = "kirbus_registry.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kirbus", "src/kirbus_server", "src/kirbus_registry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
